corrected answer for 1st question and alignment for question container

--- a/Style.css
+++ b/Style.css
@@ -28,6 +28,18 @@ body {
     text-align: center;
 }
 
+.question{
+    background-color: aliceblue;
+    color: #131313;
+    width: 100%;
+    margin-top: 20px;
+    padding: 20px;
+    border-radius: 5px;
+    display: none;
+
+}
+
+
 #current-question{
     display: none;
 }
@@ -40,19 +52,12 @@ body {
 }
 
 #rule{
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
 
-.question {
-    border-radius: 5px;
-    background-color: aliceblue;
-    color: #131313;
-    padding: 15px;
-    margin-top: 20px;
-    display: none;
-}
 
 #result {
     border-radius: 5px;
@@ -64,7 +69,20 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 2rem;
     display: none;
+}
+
+.score-summary, .play-again{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 24px;
+
+}
+
+.score-summary {
+    gap: .5rem;
 }
 
 li {
@@ -76,6 +94,12 @@ li {
     padding: 10px;
     border-radius: 5px;
     box-shadow: 0 1px 12px 0 rgba(29, 29, 29, .1);
+}
+
+.instructions>li{
+    list-style: number;
+    margin-bottom: 10px;
+
 }
 
 li:hover {
